# SCRAPERS

scrapy - LinkedIn/: Dockerfile  chromedriver.sh  docker-compose.yml  pyproject.toml
scrapy - LinkedIn/crawler/: __init__.py
scrapy - LinkedIn/crawler/spiders/: __init__.py  entrypoint.py
