[tool.poetry]
name = "scrapywiththiago"
version = "0.1.0"
description = ""
authors = ["Pedro Correia <ph@opencred.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.2"
webdriver-manager = "^4.0.1"
selenium = "^4.13.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
